# laba2.3

./: main  makefile  test
include/: ArraySequence.hpp  BitSequence.hpp  Complex.hpp  Dict.hpp  Dynamic_Array.hpp  LinkedList.hpp  ListSequence.hpp  SparseMatrix.hpp  bit.hpp  exceptions.hpp  sequence.hpp
interface_html/: index.html
src/: main.cpp  web_server.cpp
tests/: Fixtures.hpp  TEST_Dict.cpp  TEST_FUNK.cpp  TEST_SparseMatrix.cpp
ui_ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.hpp  sparse_matrix_model.hpp
ui_ui/Localization/: English.ts  LocalizationEn.h  LocalizationRu.h  Russia.ts  Style.h  resources.hpp  resources.qrc  style.qss
